When autoplay of muted videos is disabled, record the reason why.

BUG=622716

Review-Url: https://codereview.chromium.org/2111673004
Cr-Commit-Position: refs/heads/master@{#414453}

Former-commit-id: da304c86a66cb506e5a907631f4103078ac2cc5f